// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Member Dark 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      bg="defaultBackground"
                      p={3}
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#262523",
                            "paddingBottom": 15,
                            "paddingLeft": 15,
                            "paddingRight": 15,
                            "paddingTop": 15,
                          },
                        ]
                      }
                    >
                      <View
                        borderRadius={8}
                        overflow="hidden"
                        style={
                          Array [
                            Object {
                              "borderRadius": 8,
                              "overflow": "hidden",
                            },
                          ]
                        }
                      >
                        <ViewManagerAdapter_ExpoLinearGradient
                          proxiedProperties={
                            Object {
                              "colors": Array [
                                4281921405,
                                4279343502,
                              ],
                              "endPoint": Array [
                                1,
                                1,
                              ],
                              "locations": undefined,
                              "startPoint": Array [
                                0,
                                0,
                              ],
                            }
                          }
                        >
                          <RNGestureHandlerButton
                            collapsable={false}
                            onGestureEvent={[Function]}
                            onGestureHandlerEvent={[Function]}
                            onGestureHandlerStateChange={[Function]}
                            onHandlerStateChange={[Function]}
                            rippleColor={0}
                          >
                            <View
                              accessible={true}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                            >
                              <View
                                alignItems="center"
                                flexDirection="row"
                                justifyContent="space-between"
                                minHeight={80}
                                p={2}
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "justifyContent": "space-between",
                                      "minHeight": 80,
                                      "paddingBottom": 10,
                                      "paddingLeft": 10,
                                      "paddingRight": 10,
                                      "paddingTop": 10,
                                    },
                                  ]
                                }
                              >
                                <RNGestureHandlerButton
                                  collapsable={false}
                                  onGestureEvent={[Function]}
                                  onGestureHandlerEvent={[Function]}
                                  onGestureHandlerStateChange={[Function]}
                                  onHandlerStateChange={[Function]}
                                  rippleColor={0}
                                >
                                  <View
                                    accessible={true}
                                    style={
                                      Object {
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      bg="rgba(0,0,0,0.1)"
                                      borderRadius={4}
                                      height={56}
                                      overflow="hidden"
                                      position="relative"
                                      style={
                                        Array [
                                          Object {
                                            "backgroundColor": "rgba(0,0,0,0.1)",
                                            "borderRadius": 4,
                                            "height": 56,
                                            "overflow": "hidden",
                                            "position": "relative",
                                            "width": 56,
                                          },
                                        ]
                                      }
                                      width={56}
                                    >
                                      <Image
                                        source={
                                          Object {
                                            "uri": "https://via.placeholder.com/200",
                                          }
                                        }
                                        style={
                                          Object {
                                            "height": 56,
                                            "width": 56,
                                          }
                                        }
                                      />
                                      <View
                                        alignItems="center"
                                        bg="rgba(0,0,0,0.5)"
                                        bottom={0}
                                        left={0}
                                        position="absolute"
                                        right={0}
                                        style={
                                          Array [
                                            Object {
                                              "alignItems": "center",
                                              "backgroundColor": "rgba(0,0,0,0.5)",
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                            },
                                          ]
                                        }
                                      >
                                        <Text
                                          color="normalText"
                                          fontFamily="body"
                                          fontSize={0}
                                          fontWeight="bold"
                                          style={
                                            Array [
                                              Object {
                                                "color": "white",
                                                "fontFamily": "Helvetica",
                                                "fontSize": 10,
                                                "fontWeight": "700",
                                              },
                                            ]
                                          }
                                        >
                                          Sửa
                                        </Text>
                                      </View>
                                    </View>
                                  </View>
                                </RNGestureHandlerButton>
                                <View
                                  flex={1}
                                  flexDirection="column"
                                  justifyContent="space-between"
                                  ml={2}
                                  mr={1}
                                  style={
                                    Array [
                                      Object {
                                        "flexBasis": 0,
                                        "flexDirection": "column",
                                        "flexGrow": 1,
                                        "flexShrink": 1,
                                        "justifyContent": "space-between",
                                        "marginLeft": 10,
                                        "marginRight": 5,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    color="white"
                                    fontFamily="body"
                                    fontSize={3}
                                    fontWeight="bold"
                                    mb={1}
                                    numberOfLines={2}
                                    style={
                                      Array [
                                        Object {
                                          "color": "white",
                                          "fontFamily": "Helvetica",
                                          "fontSize": 17,
                                          "fontWeight": "700",
                                          "marginBottom": 5,
                                        },
                                      ]
                                    }
                                  >
                                    Hi, 
                                    Thu Huyền
                                  </Text>
                                  <View
                                    flexDirection="row"
                                    style={
                                      Array [
                                        Object {
                                          "flexDirection": "row",
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      borderColor="white"
                                      borderRadius={4}
                                      borderWidth={1}
                                      style={
                                        Array [
                                          Object {
                                            "borderColor": "white",
                                            "borderRadius": 4,
                                            "borderWidth": 1,
                                          },
                                        ]
                                      }
                                    >
                                      <Text
                                        color="white"
                                        fontFamily="body"
                                        fontSize={0}
                                        p={1}
                                        style={
                                          Array [
                                            Object {
                                              "color": "white",
                                              "fontFamily": "Helvetica",
                                              "fontSize": 10,
                                              "paddingBottom": 5,
                                              "paddingLeft": 5,
                                              "paddingRight": 5,
                                              "paddingTop": 5,
                                            },
                                          ]
                                        }
                                      >
                                        MIỄN PHÍ
                                      </Text>
                                    </View>
                                  </View>
                                </View>
                                <View
                                  accessible={true}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    Object {
                                      "backgroundColor": "#FDCC26",
                                      "borderRadius": 10,
                                      "height": 32,
                                      "justifyContent": "center",
                                      "marginRight": 10,
                                      "opacity": 1,
                                      "overflow": "hidden",
                                      "width": 86,
                                    }
                                  }
                                >
                                  <ViewManagerAdapter_ExpoLinearGradient
                                    proxiedProperties={
                                      Object {
                                        "colors": Array [
                                          0,
                                          0,
                                        ],
                                        "endPoint": Array [
                                          1,
                                          1,
                                        ],
                                        "locations": undefined,
                                        "startPoint": Array [
                                          0,
                                          0,
                                        ],
                                      }
                                    }
                                    style={
                                      Object {
                                        "height": "100%",
                                      }
                                    }
                                  >
                                    <View
                                      alignItems="center"
                                      flexDirection="row"
                                      height="100%"
                                      justifyContent="center"
                                      style={
                                        Array [
                                          Object {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "height": "100%",
                                            "justifyContent": "center",
                                            "width": "100%",
                                          },
                                        ]
                                      }
                                      width="100%"
                                    >
                                      <Text
                                        color="#262523"
                                        fontFamily="body"
                                        fontSize={2}
                                        fontWeight="bold"
                                        style={
                                          Array [
                                            Object {
                                              "color": "#262523",
                                              "fontFamily": "Helvetica",
                                              "fontSize": 14,
                                              "fontWeight": "700",
                                            },
                                            Object {},
                                          ]
                                        }
                                      >
                                        Go VIP
                                      </Text>
                                    </View>
                                  </ViewManagerAdapter_ExpoLinearGradient>
                                </View>
                              </View>
                            </View>
                          </RNGestureHandlerButton>
                        </ViewManagerAdapter_ExpoLinearGradient>
                      </View>
                      <View
                        height={100}
                        style={
                          Array [
                            Object {
                              "height": 100,
                            },
                          ]
                        }
                      />
                      <View
                        borderRadius={8}
                        overflow="hidden"
                        style={
                          Array [
                            Object {
                              "borderRadius": 8,
                              "overflow": "hidden",
                            },
                          ]
                        }
                      >
                        <ViewManagerAdapter_ExpoLinearGradient
                          proxiedProperties={
                            Object {
                              "colors": Array [
                                4281921405,
                                4279343502,
                              ],
                              "endPoint": Array [
                                1,
                                1,
                              ],
                              "locations": undefined,
                              "startPoint": Array [
                                0,
                                0,
                              ],
                            }
                          }
                        >
                          <RNGestureHandlerButton
                            collapsable={false}
                            onGestureEvent={[Function]}
                            onGestureHandlerEvent={[Function]}
                            onGestureHandlerStateChange={[Function]}
                            onHandlerStateChange={[Function]}
                            rippleColor={0}
                          >
                            <View
                              accessible={true}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                            >
                              <View
                                alignItems="center"
                                flexDirection="row"
                                justifyContent="space-between"
                                minHeight={80}
                                p={2}
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "justifyContent": "space-between",
                                      "minHeight": 80,
                                      "paddingBottom": 10,
                                      "paddingLeft": 10,
                                      "paddingRight": 10,
                                      "paddingTop": 10,
                                    },
                                  ]
                                }
                              >
                                <RNGestureHandlerButton
                                  collapsable={false}
                                  onGestureEvent={[Function]}
                                  onGestureHandlerEvent={[Function]}
                                  onGestureHandlerStateChange={[Function]}
                                  onHandlerStateChange={[Function]}
                                  rippleColor={0}
                                >
                                  <View
                                    accessible={true}
                                    style={
                                      Object {
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      bg="rgba(0,0,0,0.1)"
                                      borderRadius={4}
                                      height={56}
                                      overflow="hidden"
                                      position="relative"
                                      style={
                                        Array [
                                          Object {
                                            "backgroundColor": "rgba(0,0,0,0.1)",
                                            "borderRadius": 4,
                                            "height": 56,
                                            "overflow": "hidden",
                                            "position": "relative",
                                            "width": 56,
                                          },
                                        ]
                                      }
                                      width={56}
                                    >
                                      <Image
                                        source={
                                          Object {
                                            "uri": "https://via.placeholder.com/200",
                                          }
                                        }
                                        style={
                                          Object {
                                            "height": 56,
                                            "width": 56,
                                          }
                                        }
                                      />
                                      <View
                                        alignItems="center"
                                        bg="rgba(0,0,0,0.5)"
                                        bottom={0}
                                        left={0}
                                        position="absolute"
                                        right={0}
                                        style={
                                          Array [
                                            Object {
                                              "alignItems": "center",
                                              "backgroundColor": "rgba(0,0,0,0.5)",
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                            },
                                          ]
                                        }
                                      >
                                        <Text
                                          color="normalText"
                                          fontFamily="body"
                                          fontSize={0}
                                          fontWeight="bold"
                                          style={
                                            Array [
                                              Object {
                                                "color": "white",
                                                "fontFamily": "Helvetica",
                                                "fontSize": 10,
                                                "fontWeight": "700",
                                              },
                                            ]
                                          }
                                        >
                                          Sửa
                                        </Text>
                                      </View>
                                    </View>
                                  </View>
                                </RNGestureHandlerButton>
                                <View
                                  flex={1}
                                  flexDirection="column"
                                  justifyContent="space-between"
                                  ml={2}
                                  mr={1}
                                  style={
                                    Array [
                                      Object {
                                        "flexBasis": 0,
                                        "flexDirection": "column",
                                        "flexGrow": 1,
                                        "flexShrink": 1,
                                        "justifyContent": "space-between",
                                        "marginLeft": 10,
                                        "marginRight": 5,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    color="white"
                                    fontFamily="body"
                                    fontSize={3}
                                    fontWeight="bold"
                                    mb={1}
                                    numberOfLines={2}
                                    style={
                                      Array [
                                        Object {
                                          "color": "white",
                                          "fontFamily": "Helvetica",
                                          "fontSize": 17,
                                          "fontWeight": "700",
                                          "marginBottom": 5,
                                        },
                                      ]
                                    }
                                  >
                                    Hi, 
                                    Thu Huyền Thu Huyền Thu Huyền Thu Huyền Thu Huyền Thu Huyền 
                                  </Text>
                                  <View
                                    flexDirection="row"
                                    style={
                                      Array [
                                        Object {
                                          "flexDirection": "row",
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      borderColor="white"
                                      borderRadius={4}
                                      borderWidth={1}
                                      style={
                                        Array [
                                          Object {
                                            "borderColor": "white",
                                            "borderRadius": 4,
                                            "borderWidth": 1,
                                          },
                                        ]
                                      }
                                    >
                                      <Text
                                        color="white"
                                        fontFamily="body"
                                        fontSize={0}
                                        p={1}
                                        style={
                                          Array [
                                            Object {
                                              "color": "white",
                                              "fontFamily": "Helvetica",
                                              "fontSize": 10,
                                              "paddingBottom": 5,
                                              "paddingLeft": 5,
                                              "paddingRight": 5,
                                              "paddingTop": 5,
                                            },
                                          ]
                                        }
                                      >
                                        MIỄN PHÍ
                                      </Text>
                                    </View>
                                  </View>
                                </View>
                                <View
                                  accessible={true}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    Object {
                                      "backgroundColor": "#FDCC26",
                                      "borderRadius": 10,
                                      "height": 32,
                                      "justifyContent": "center",
                                      "marginRight": 10,
                                      "opacity": 1,
                                      "overflow": "hidden",
                                      "width": 86,
                                    }
                                  }
                                >
                                  <ViewManagerAdapter_ExpoLinearGradient
                                    proxiedProperties={
                                      Object {
                                        "colors": Array [
                                          0,
                                          0,
                                        ],
                                        "endPoint": Array [
                                          1,
                                          1,
                                        ],
                                        "locations": undefined,
                                        "startPoint": Array [
                                          0,
                                          0,
                                        ],
                                      }
                                    }
                                    style={
                                      Object {
                                        "height": "100%",
                                      }
                                    }
                                  >
                                    <View
                                      alignItems="center"
                                      flexDirection="row"
                                      height="100%"
                                      justifyContent="center"
                                      style={
                                        Array [
                                          Object {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "height": "100%",
                                            "justifyContent": "center",
                                            "width": "100%",
                                          },
                                        ]
                                      }
                                      width="100%"
                                    >
                                      <Text
                                        color="#262523"
                                        fontFamily="body"
                                        fontSize={2}
                                        fontWeight="bold"
                                        style={
                                          Array [
                                            Object {
                                              "color": "#262523",
                                              "fontFamily": "Helvetica",
                                              "fontSize": 14,
                                              "fontWeight": "700",
                                            },
                                            Object {},
                                          ]
                                        }
                                      >
                                        Go VIP
                                      </Text>
                                    </View>
                                  </ViewManagerAdapter_ExpoLinearGradient>
                                </View>
                              </View>
                            </View>
                          </RNGestureHandlerButton>
                        </ViewManagerAdapter_ExpoLinearGradient>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;

exports[`Storyshots Member Light 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      bg="defaultBackground"
                      p={3}
                      style={
                        Array [
                          Object {
                            "backgroundColor": "white",
                            "paddingBottom": 15,
                            "paddingLeft": 15,
                            "paddingRight": 15,
                            "paddingTop": 15,
                          },
                        ]
                      }
                    >
                      <View
                        borderRadius={8}
                        overflow="hidden"
                        style={
                          Array [
                            Object {
                              "borderRadius": 8,
                              "overflow": "hidden",
                            },
                          ]
                        }
                      >
                        <ViewManagerAdapter_ExpoLinearGradient
                          proxiedProperties={
                            Object {
                              "colors": Array [
                                4281921405,
                                4279343502,
                              ],
                              "endPoint": Array [
                                1,
                                1,
                              ],
                              "locations": undefined,
                              "startPoint": Array [
                                0,
                                0,
                              ],
                            }
                          }
                        >
                          <RNGestureHandlerButton
                            collapsable={false}
                            onGestureEvent={[Function]}
                            onGestureHandlerEvent={[Function]}
                            onGestureHandlerStateChange={[Function]}
                            onHandlerStateChange={[Function]}
                            rippleColor={0}
                          >
                            <View
                              accessible={true}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                            >
                              <View
                                alignItems="center"
                                flexDirection="row"
                                justifyContent="space-between"
                                minHeight={80}
                                p={2}
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "justifyContent": "space-between",
                                      "minHeight": 80,
                                      "paddingBottom": 10,
                                      "paddingLeft": 10,
                                      "paddingRight": 10,
                                      "paddingTop": 10,
                                    },
                                  ]
                                }
                              >
                                <RNGestureHandlerButton
                                  collapsable={false}
                                  onGestureEvent={[Function]}
                                  onGestureHandlerEvent={[Function]}
                                  onGestureHandlerStateChange={[Function]}
                                  onHandlerStateChange={[Function]}
                                  rippleColor={0}
                                >
                                  <View
                                    accessible={true}
                                    style={
                                      Object {
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      bg="rgba(0,0,0,0.1)"
                                      borderRadius={4}
                                      height={56}
                                      overflow="hidden"
                                      position="relative"
                                      style={
                                        Array [
                                          Object {
                                            "backgroundColor": "rgba(0,0,0,0.1)",
                                            "borderRadius": 4,
                                            "height": 56,
                                            "overflow": "hidden",
                                            "position": "relative",
                                            "width": 56,
                                          },
                                        ]
                                      }
                                      width={56}
                                    >
                                      <Image
                                        source={
                                          Object {
                                            "uri": "https://via.placeholder.com/200",
                                          }
                                        }
                                        style={
                                          Object {
                                            "height": 56,
                                            "width": 56,
                                          }
                                        }
                                      />
                                      <View
                                        alignItems="center"
                                        bg="rgba(0,0,0,0.5)"
                                        bottom={0}
                                        left={0}
                                        position="absolute"
                                        right={0}
                                        style={
                                          Array [
                                            Object {
                                              "alignItems": "center",
                                              "backgroundColor": "rgba(0,0,0,0.5)",
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                            },
                                          ]
                                        }
                                      >
                                        <Text
                                          color="normalText"
                                          fontFamily="body"
                                          fontSize={0}
                                          fontWeight="bold"
                                          style={
                                            Array [
                                              Object {
                                                "color": "#262523",
                                                "fontFamily": "Helvetica",
                                                "fontSize": 10,
                                                "fontWeight": "700",
                                              },
                                            ]
                                          }
                                        >
                                          Sửa
                                        </Text>
                                      </View>
                                    </View>
                                  </View>
                                </RNGestureHandlerButton>
                                <View
                                  flex={1}
                                  flexDirection="column"
                                  justifyContent="space-between"
                                  ml={2}
                                  mr={1}
                                  style={
                                    Array [
                                      Object {
                                        "flexBasis": 0,
                                        "flexDirection": "column",
                                        "flexGrow": 1,
                                        "flexShrink": 1,
                                        "justifyContent": "space-between",
                                        "marginLeft": 10,
                                        "marginRight": 5,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    color="white"
                                    fontFamily="body"
                                    fontSize={3}
                                    fontWeight="bold"
                                    mb={1}
                                    numberOfLines={2}
                                    style={
                                      Array [
                                        Object {
                                          "color": "white",
                                          "fontFamily": "Helvetica",
                                          "fontSize": 17,
                                          "fontWeight": "700",
                                          "marginBottom": 5,
                                        },
                                      ]
                                    }
                                  >
                                    Hi, 
                                    Thu Huyền
                                  </Text>
                                  <View
                                    flexDirection="row"
                                    style={
                                      Array [
                                        Object {
                                          "flexDirection": "row",
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      borderColor="white"
                                      borderRadius={4}
                                      borderWidth={1}
                                      style={
                                        Array [
                                          Object {
                                            "borderColor": "white",
                                            "borderRadius": 4,
                                            "borderWidth": 1,
                                          },
                                        ]
                                      }
                                    >
                                      <Text
                                        color="white"
                                        fontFamily="body"
                                        fontSize={0}
                                        p={1}
                                        style={
                                          Array [
                                            Object {
                                              "color": "white",
                                              "fontFamily": "Helvetica",
                                              "fontSize": 10,
                                              "paddingBottom": 5,
                                              "paddingLeft": 5,
                                              "paddingRight": 5,
                                              "paddingTop": 5,
                                            },
                                          ]
                                        }
                                      >
                                        MIỄN PHÍ
                                      </Text>
                                    </View>
                                  </View>
                                </View>
                                <View
                                  accessible={true}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    Object {
                                      "backgroundColor": "#FDCC26",
                                      "borderRadius": 10,
                                      "height": 32,
                                      "justifyContent": "center",
                                      "marginRight": 10,
                                      "opacity": 1,
                                      "overflow": "hidden",
                                      "width": 86,
                                    }
                                  }
                                >
                                  <ViewManagerAdapter_ExpoLinearGradient
                                    proxiedProperties={
                                      Object {
                                        "colors": Array [
                                          0,
                                          0,
                                        ],
                                        "endPoint": Array [
                                          1,
                                          1,
                                        ],
                                        "locations": undefined,
                                        "startPoint": Array [
                                          0,
                                          0,
                                        ],
                                      }
                                    }
                                    style={
                                      Object {
                                        "height": "100%",
                                      }
                                    }
                                  >
                                    <View
                                      alignItems="center"
                                      flexDirection="row"
                                      height="100%"
                                      justifyContent="center"
                                      style={
                                        Array [
                                          Object {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "height": "100%",
                                            "justifyContent": "center",
                                            "width": "100%",
                                          },
                                        ]
                                      }
                                      width="100%"
                                    >
                                      <Text
                                        color="#262523"
                                        fontFamily="body"
                                        fontSize={2}
                                        fontWeight="bold"
                                        style={
                                          Array [
                                            Object {
                                              "color": "#262523",
                                              "fontFamily": "Helvetica",
                                              "fontSize": 14,
                                              "fontWeight": "700",
                                            },
                                            Object {},
                                          ]
                                        }
                                      >
                                        Go VIP
                                      </Text>
                                    </View>
                                  </ViewManagerAdapter_ExpoLinearGradient>
                                </View>
                              </View>
                            </View>
                          </RNGestureHandlerButton>
                        </ViewManagerAdapter_ExpoLinearGradient>
                      </View>
                      <View
                        height={100}
                        style={
                          Array [
                            Object {
                              "height": 100,
                            },
                          ]
                        }
                      />
                      <View
                        borderRadius={8}
                        overflow="hidden"
                        style={
                          Array [
                            Object {
                              "borderRadius": 8,
                              "overflow": "hidden",
                            },
                          ]
                        }
                      >
                        <ViewManagerAdapter_ExpoLinearGradient
                          proxiedProperties={
                            Object {
                              "colors": Array [
                                4281921405,
                                4279343502,
                              ],
                              "endPoint": Array [
                                1,
                                1,
                              ],
                              "locations": undefined,
                              "startPoint": Array [
                                0,
                                0,
                              ],
                            }
                          }
                        >
                          <RNGestureHandlerButton
                            collapsable={false}
                            onGestureEvent={[Function]}
                            onGestureHandlerEvent={[Function]}
                            onGestureHandlerStateChange={[Function]}
                            onHandlerStateChange={[Function]}
                            rippleColor={0}
                          >
                            <View
                              accessible={true}
                              style={
                                Object {
                                  "opacity": 1,
                                }
                              }
                            >
                              <View
                                alignItems="center"
                                flexDirection="row"
                                justifyContent="space-between"
                                minHeight={80}
                                p={2}
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "justifyContent": "space-between",
                                      "minHeight": 80,
                                      "paddingBottom": 10,
                                      "paddingLeft": 10,
                                      "paddingRight": 10,
                                      "paddingTop": 10,
                                    },
                                  ]
                                }
                              >
                                <RNGestureHandlerButton
                                  collapsable={false}
                                  onGestureEvent={[Function]}
                                  onGestureHandlerEvent={[Function]}
                                  onGestureHandlerStateChange={[Function]}
                                  onHandlerStateChange={[Function]}
                                  rippleColor={0}
                                >
                                  <View
                                    accessible={true}
                                    style={
                                      Object {
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      bg="rgba(0,0,0,0.1)"
                                      borderRadius={4}
                                      height={56}
                                      overflow="hidden"
                                      position="relative"
                                      style={
                                        Array [
                                          Object {
                                            "backgroundColor": "rgba(0,0,0,0.1)",
                                            "borderRadius": 4,
                                            "height": 56,
                                            "overflow": "hidden",
                                            "position": "relative",
                                            "width": 56,
                                          },
                                        ]
                                      }
                                      width={56}
                                    >
                                      <Image
                                        source={
                                          Object {
                                            "uri": "https://via.placeholder.com/200",
                                          }
                                        }
                                        style={
                                          Object {
                                            "height": 56,
                                            "width": 56,
                                          }
                                        }
                                      />
                                      <View
                                        alignItems="center"
                                        bg="rgba(0,0,0,0.5)"
                                        bottom={0}
                                        left={0}
                                        position="absolute"
                                        right={0}
                                        style={
                                          Array [
                                            Object {
                                              "alignItems": "center",
                                              "backgroundColor": "rgba(0,0,0,0.5)",
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                            },
                                          ]
                                        }
                                      >
                                        <Text
                                          color="normalText"
                                          fontFamily="body"
                                          fontSize={0}
                                          fontWeight="bold"
                                          style={
                                            Array [
                                              Object {
                                                "color": "#262523",
                                                "fontFamily": "Helvetica",
                                                "fontSize": 10,
                                                "fontWeight": "700",
                                              },
                                            ]
                                          }
                                        >
                                          Sửa
                                        </Text>
                                      </View>
                                    </View>
                                  </View>
                                </RNGestureHandlerButton>
                                <View
                                  flex={1}
                                  flexDirection="column"
                                  justifyContent="space-between"
                                  ml={2}
                                  mr={1}
                                  style={
                                    Array [
                                      Object {
                                        "flexBasis": 0,
                                        "flexDirection": "column",
                                        "flexGrow": 1,
                                        "flexShrink": 1,
                                        "justifyContent": "space-between",
                                        "marginLeft": 10,
                                        "marginRight": 5,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    color="white"
                                    fontFamily="body"
                                    fontSize={3}
                                    fontWeight="bold"
                                    mb={1}
                                    numberOfLines={2}
                                    style={
                                      Array [
                                        Object {
                                          "color": "white",
                                          "fontFamily": "Helvetica",
                                          "fontSize": 17,
                                          "fontWeight": "700",
                                          "marginBottom": 5,
                                        },
                                      ]
                                    }
                                  >
                                    Hi, 
                                    Thu Huyền Thu Huyền Thu Huyền Thu Huyền Thu Huyền Thu Huyền 
                                  </Text>
                                  <View
                                    flexDirection="row"
                                    style={
                                      Array [
                                        Object {
                                          "flexDirection": "row",
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      borderColor="white"
                                      borderRadius={4}
                                      borderWidth={1}
                                      style={
                                        Array [
                                          Object {
                                            "borderColor": "white",
                                            "borderRadius": 4,
                                            "borderWidth": 1,
                                          },
                                        ]
                                      }
                                    >
                                      <Text
                                        color="white"
                                        fontFamily="body"
                                        fontSize={0}
                                        p={1}
                                        style={
                                          Array [
                                            Object {
                                              "color": "white",
                                              "fontFamily": "Helvetica",
                                              "fontSize": 10,
                                              "paddingBottom": 5,
                                              "paddingLeft": 5,
                                              "paddingRight": 5,
                                              "paddingTop": 5,
                                            },
                                          ]
                                        }
                                      >
                                        MIỄN PHÍ
                                      </Text>
                                    </View>
                                  </View>
                                </View>
                                <View
                                  accessible={true}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    Object {
                                      "backgroundColor": "#FDCC26",
                                      "borderRadius": 10,
                                      "height": 32,
                                      "justifyContent": "center",
                                      "marginRight": 10,
                                      "opacity": 1,
                                      "overflow": "hidden",
                                      "width": 86,
                                    }
                                  }
                                >
                                  <ViewManagerAdapter_ExpoLinearGradient
                                    proxiedProperties={
                                      Object {
                                        "colors": Array [
                                          0,
                                          0,
                                        ],
                                        "endPoint": Array [
                                          1,
                                          1,
                                        ],
                                        "locations": undefined,
                                        "startPoint": Array [
                                          0,
                                          0,
                                        ],
                                      }
                                    }
                                    style={
                                      Object {
                                        "height": "100%",
                                      }
                                    }
                                  >
                                    <View
                                      alignItems="center"
                                      flexDirection="row"
                                      height="100%"
                                      justifyContent="center"
                                      style={
                                        Array [
                                          Object {
                                            "alignItems": "center",
                                            "flexDirection": "row",
                                            "height": "100%",
                                            "justifyContent": "center",
                                            "width": "100%",
                                          },
                                        ]
                                      }
                                      width="100%"
                                    >
                                      <Text
                                        color="#262523"
                                        fontFamily="body"
                                        fontSize={2}
                                        fontWeight="bold"
                                        style={
                                          Array [
                                            Object {
                                              "color": "#262523",
                                              "fontFamily": "Helvetica",
                                              "fontSize": 14,
                                              "fontWeight": "700",
                                            },
                                            Object {},
                                          ]
                                        }
                                      >
                                        Go VIP
                                      </Text>
                                    </View>
                                  </ViewManagerAdapter_ExpoLinearGradient>
                                </View>
                              </View>
                            </View>
                          </RNGestureHandlerButton>
                        </ViewManagerAdapter_ExpoLinearGradient>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;
